force-app/main/default/objects/Lead/fields/ciudad__c.field-meta.xml
<CustomField>
    <fullName>ciudad__c</fullName>
    <label>Ciudad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>