force-app/main/default/objects/Lead/fields/comuna__c.field-meta.xml
<CustomField>
    <fullName>comuna__c</fullName>
    <label>Comuna</label>
    <length>50</length>
    <type>Text</type>
</CustomField>