force-app/main/default/objects/Lead/fields/Descripcion_del_requerimiento__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del_requerimiento__c</fullName>
    <label>Descripción del requerimiento</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>