force-app/main/default/objects/Lead/fields/dv__c.field-meta.xml
<CustomField>
    <fullName>dv__c</fullName>
    <label>DV</label>
    <length>1</length>
    <type>Text</type>
</CustomField>