force-app/main/default/objects/Lead/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Familia</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unidad_de_negocio__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Familia</valueSetName>
    </valueSet>
</CustomField>