force-app/main/default/objects/Lead/fields/Giro__c.field-meta.xml
<CustomField>
    <fullName>Giro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giro</label>
    <referenceTo>Giro__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>