force-app/main/default/objects/Lead/fields/Producto_MIX__c.field-meta.xml
<CustomField>
    <fullName>Producto_MIX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto MIX</label>
    <type>Checkbox</type>
</CustomField>