force-app/main/default/objects/Lead/fields/Rut__c.field-meta.xml
<CustomField>
    <fullName>Rut__c</fullName>
    <formula>text(Rut_Sin_DV__c) &amp; &apos;-&apos; &amp; dv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rut</label>
    <type>Text</type>
</CustomField>