force-app/main/default/objects/Lead/fields/Rut_Sin_DV__c.field-meta.xml
<CustomField>
    <fullName>Rut_Sin_DV__c</fullName>
    <label>Rut (Sin DV)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>