force-app/main/default/objects/Lead/fields/Unidad_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Unidad_de_negocio__c</fullName>
    <label>Unidad de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electromecánica</fullName>
            </value>
            <value>
                <fullName>Generación</fullName>
            </value>
            <value>
                <fullName>Servicio Técnico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>